fix dark mode color of active tab

--- a/app/src/scss/global.scss
+++ b/app/src/scss/global.scss
@@ -59,4 +59,7 @@
   .v-dialog--fullscreen {
     background: #363636;
   }
+  .v-tab--active {
+    color: #fff !important;
+  }
 }
